social icon. spelling errors

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <br>Bergen AUDIO</strong>
             </h1>
             <p class="m-b-40">Ekspertise på lyd og hørsel
-              <br>Vår kunskap- Din tryghet.</p>
+              <br>Vår kunnskap - din trygghet.</p>
             <p>
               <a class="btn btn-lg btn-circle btn-outline-new-white" href="#servicebuds">ørepropper</a>
               <a class="btn btn-lg btn-circle btn-outline-new-white" href="#serviceaid">høreapparat</a>
@@ -298,23 +298,13 @@
                   </p>
                   <ul class="social-icons">
                     <li>
-                      <a href="#">
-                        <i class="fab fa-twitter"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
+                      <a href="https://www.instagram.com/bergen.audio/">
                         <i class="fab fa-instagram"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
                         <i class="fab fa-facebook-f"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fab fa-pinterest-p"></i>
                       </a>
                     </li>
                   </ul>
@@ -367,23 +357,13 @@
         <!-- Social Icons-->
         <ul class="social-icons text-center">
           <li>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
+            <a href="https://www.instagram.com/bergen.audio/">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/BergenAudio-2296981730530710/?fb_dtsg_ag=AdyBbmikvoPY5otU05peHCEsW9YO8-QdUQDUDlhpKi3AxA%3AAdyVfymMZNSyO5tDZbYHGnl7gTVdH0Dz-2BCoAIe-dK0Cg">
               <i class="fab fa-facebook-f"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fab fa-pinterest-p"></i>
             </a>
           </li>
         </ul>
